# indieweb2-bastion

./: .echidnabot.toml  .env.example  .envrc  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  .prettierrc  .tool-versions  0-AI-MANIFEST.a2ml  AI_USAGE.adoc  CHANGELOG.adoc  CI_CD.adoc  CONTRIBUTING.adoc  CONTRIBUTING.md  CRYPTO-POLICY.adoc  Containerfile  ECOSYSTEM.scm  Justfile  META.scm  PRIVACY.adoc  PROJECT_STATUS.adoc  README.adoc  REVERSIBILITY.adoc  ROADMAP.adoc  SECURITY.adoc  SECURITY.md  STATE.scm  TESTING.adoc  TOPOLOGY.md  WASM_STATUS.adoc  bootstrap.sh  bsconfig.json  compose.toml  deno.json  justfile  package-lock.json  package.json  tree2.txt
.bot_directives/: README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: indieweb-protocol.md
.github/pending-issues/: indieauth-pre-validation.md  micropub-content-type-validation.md  sibling-repos-coordination.md  webmention-rate-limiting.md
.github/workflows/: casket-pages.yml  codeql.yml  comprehensive-quality.yml  deno.yml  mirror.yml  quality.yml  scorecard.yml  wellknown-enforcement.yml
.machine_readable/: CRYPTO-POLICY.scm  ECOSYSTEM.scm  META.scm  STATE.scm
.rhodium/: LEVEL  WAIVER.adoc  compliance.json
.well-known/: consent.json  indieweb-manifest.json  security.txt
config/: build.ncl  ci.ncl  deploy.ncl  dev.ncl  main.ncl  mcp,ncl
container/: Containerfile  seccomp.json  selinux-policy.te
contracts/: ERC20.sol  Registry.vy
crypto/: README.adoc  shake256.sh  shake3-512.sh  sign_policy.js
deno/ipfs/: rehydrate.js
docs/: ARCHITECTURE.adoc  BOOTSTRAP.adoc  CODE_OF_CONDUCT.adoc  COMMUNITY_TERMS.adoc  CONTRIBUTING.adoc  FORMAL_SPEC.adoc  FUNDING.adoc  FUNDING.yml  GOVERNANCE.adoc  IMPACT.adoc  INDIEWEB_INTEGRATION.adoc  NICKEL.adoc  ONBOARDING.adoc  PERFORMANCE.adoc  PREREQUISITES.adoc  ROADMAP.adoc  SCRIPTS.adoc  cookbook.adoc  default-consent.adoc  justfile-cookbook.adoc  maintainer.adoc  trusted_contributor.adoc
docs/adr/: 0001-adopt-rhodium-standard.adoc  0002-multi-chain-architecture.adoc  0003-odns-rust-rewrite.adoc  STATUS.adoc
docs/capabilities/: default-consent.adoc  maintainer.adoc  trusted_contributor.adoc
docs/security/: THREAT_MODEL_WEBMENTION.adoc
graphql-dns-api/: Cargo.toml  NICKEL-INTEGRATION.md  README.md  schema.graphql
graphql-dns-api/src/: blockchain.rs  consent.rs  db.rs  dnssec.rs  error.rs  main.rs  models.rs  policy.rs  resolvers.rs  schema.rs
graphql-dns-api/tests/: integration_test.rs
infra/sdp/mtls/: profile.yaml
infra/sdp/overlay/: sdp-config.yaml
infra/sdp/policies/: sdp-policy.ncl
licenses/: README.adoc
maintenance/: crypto_loom.sh  robot.py
modules/: cadre.just  deploy.just  mcp.just
odns-proxy/: README.md  go.mod  main.go
odns-resolver/: README.md  go.mod  main.go
odns-rs/: Cargo.toml
odns-rs/common/: Cargo.toml
odns-rs/common/src/: crypto.rs  lib.rs  protocol.rs  signatures.rs  sphincs_fallback.rs
odns-rs/proxy/: Cargo.toml
odns-rs/proxy/src/: main.rs
odns-rs/resolver/: Cargo.toml
odns-rs/resolver/src/: main.rs
policy/: run.js
policy/curps/: policy.ncl  schema.ncl  scripts.ncl  test-policy.json  webmention.ncl
policy/runner/crypto/: sign_policy.js
policy/runner/policy/: run.js
products/apps/android/src/: README.adoc
products/apps/ios/src/: README.adoc
products/apps/win/src/: README.adoc
products/extensions/edge/: manifest.json
products/extensions/firefox/src/: content.js
products/pwa/public/: manifest.webmanifest
products/wordpress/plugin/: README.adoc
protocols/icp/: dfx.json
protocols/icp/canisters/consent/: Consent.mo
protocols/icp/canisters/provenance/: Provenance.mo
sbom/: generate.sh
scripts/: GenerateShells.res  bootstrap.sh  check-references.sh  gen_cookbook.js  gen_scripts.js  install_vectors.adoc  interactive_tidy.oil  interactive_tidy.sh  permissions.sh  setup_hooks.sh  static_serve.js  tidy_root.oil
services/consent-api/: mod.ts
services/webmention-rate-limiter/: Cargo.toml
services/webmention-rate-limiter/src/: config.rs  handlers.rs  lib.rs  limiter.rs  main.rs  validator.rs
services/webmention-rate-limiter/tests/: integration_test.rs  security_test.rs
services/webmention-rate-limiter/tests/harness/: attacks.rs  generators.rs  metrics.rs  mod.rs
slm/: README.adoc  config.json
src/: Deno.res  PolicyDecode.res  PolicyGate.res  PolicyGateCLI.res  PolicyTypes.res  scripts
src/scripts/: Bastion.res
surrealdb/: provenance.capnp  schema.surql
test/: Justfile
wordpress/: README.md  indieweb2-consent.php
