# SPDX-FileCopyrightText: 2025 Hyperpolymath
# SPDX-License-Identifier: Apache-2.0

[package]
name = "webmention-rate-limiter"
version = "0.1.0"
edition = "2021"
description = "Webmention ingress rate limiter for indieweb2-bastion"
license = "Apache-2.0"
repository = "https://github.com/hyperpolymath/indieweb2-bastion"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "sync"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing
url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
# Security fix: override transitive protobuf to patch CVE-2025-53605
protobuf = "3.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
opt-level = 3
strip = true
